[package]
name = "ctrl_kik"
version = "0.1.0"
edition = "2021"



[dependencies]
common = { path = "../common" }
tokio = { version = "1.26.0", features = ["full"] }
bytes = { version = "1.4.0", features = ["serde"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.8", features = ["full"] }
anyhow = "1.0.71"
log = "0.4.20"
env_logger = "0.10.0"
async-recursion = "1.0.5"
encoding_rs = "0.8.33"
chrono = "0.4.29"
chrono-tz = "0.8.3"
image = "0.24.7"
scrap = "0.5"
fs4 = { version = "0.6", features = ["tokio-async"] }
uuid = { version = "1.4.1", features = ["v4", ] }
[target.'cfg(windows)'.dependencies]
whoami = "1.4.1"
winapi = {version="0.3.9",features = ["processthreadsapi", "winbase", "winnt","synchapi","wingdi","windef","winuser"]}

