[package]
name = "ctrl_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
tokio = { version = "1.26.0", features = ["full"] }
bytes = { version = "1.4.0", features = ["serde"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.8", features = ["full"] }
anyhow = "1.0.71"
log = "0.4.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tracing-log = "0.2"
color-backtrace = { version = "0.6" }
uuid = { version = "1.4.1", features = ["v4", ] }
chrono = "0.4.29"

