[package]
name = "real_ctrl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
common = { path = "../common" }
tokio = { version = "1.26.0", features = ["full"] }
bytes = { version = "1.4.0", features = ["serde"] }
tokio-stream = "0.1.14"
futures = "0.3.31"
tokio-util = { version = "0.7.8", features = ["full"] }
anyhow = "1.0.71"
rustyline = "12.0.0"
log = "0.4.20"
env_logger = "0.10.0"
uuid = { version = "1.4.1", features = ["v4", ] }
sha2 = "0.10.9"

