
[package]
name = "start"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.106"
tokio = { version = "1.26.0", features = ["full"] }
encoding_rs = "0.8.33"
winapi = { version = "0.3.9", features = ["processthreadsapi"] }
common = { path = "../common" }


